[package]
name = "arcs-wasm-experiment"
version = "0.1.0"
authors = ["Sam Samai"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
arcs = { git = "https://github.com/samsamai/arcs.git", branch = "update_piet" }

env_logger = "0.7"
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

js-sys = "0.3.36"

[dependencies.web-sys]
version = "0.3.36"
features = [
  "Window",
  "CanvasGradient",
  "CanvasRenderingContext2d",
  "CanvasWindingRule",
  "Document",
  "DomMatrix",
  "Element",
  "HtmlCanvasElement",
  "ImageBitmap",
  "ImageData",
  "TextMetrics",
]


[dev-dependencies.web-sys]
version = "0.3.36"
features = [
  "console",
  "Window",
  "CanvasGradient",
  "CanvasRenderingContext2d",
  "CanvasWindingRule",
  "Document",
  "DomMatrix",
  "Element",
  "HtmlCanvasElement",
  "ImageBitmap",
  "ImageData",
  "TextMetrics",
]
